<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apiPackage.ApiFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="16dp"
        android:rowCount="2"
        android:rowOrderPreserved="false">

        <Button
            android:id="@+id/btnGetData"
            android:layout_width="@dimen/_150dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/_30dp"
            android:backgroundTint="@color/color1"
            android:text="@string/get_data"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnPostData"
            android:layout_width="@dimen/_150dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="1"
            android:backgroundTint="@color/color1"
            android:text="@string/post_data"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnUpdateData"
            android:layout_width="@dimen/_150dp"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="@dimen/_15dp"
            android:backgroundTint="@color/color1"
            android:text="@string/update_data"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnDeleteData"
            android:layout_width="@dimen/_150dp"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginTop="@dimen/_15dp"
            android:backgroundTint="@color/color1"
            android:text="@string/delete_data"
            android:textColor="@color/black" />
    </GridLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_150dp">

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold" />

    </androidx.core.widget.NestedScrollView>

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_210dp"
        android:hint="@string/enter_user_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edittextTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_250dp"
        android:hint="@string/enter_title"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editTextBody"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="300dp"
        android:hint="@string/enter_body"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:visibility="gone" />

    <Button
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:text="@string/submit"
        android:visibility="gone"
        android:backgroundTint="@color/color1"
        android:textColor="@color/black"
        android:layout_marginTop="400dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnSubmit"/>


</FrameLayout>