<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_details"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_150dp"
        android:autofillHints="username"
        android:hint="@string/enter_a_name"
        android:textSize="16sp"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/add_data"
        android:layout_gravity="center"
        />
</FrameLayout>