<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ServiceFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background_service_example"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_30sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="@dimen/_15dp"
        android:id="@+id/text"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_150dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_service"
        android:id="@+id/btnStart"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_250dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/stop_service"
        android:id="@+id/btnStop"/>




</FrameLayout>